<resources>
    <string name="app_name">1000Words</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="start_teaching">Start teaching</string>
    <string name="your_progress">Your progress</string>
    <string name="settings">Settings</string>
    <string name="change_profile">Change profile</string>
    <string name="share">Share</string>
    <string name="testing">Begin testing</string>
    <string name="choose_single_test">Choose single test</string>
    <string name="library">Library</string>
    <string name="log_out">Log out</string>
    <string name="user_learning_progress">Your progress</string>
    <string name="user_name">User name</string>
    <string name="user_email">User@email.com</string>
    <string name="transcription">Transcription</string>
    <string name="word">Word</string>
    <string name="answer0_bt">Button0</string>
    <string name="answer1_bt">Button1</string>
    <string name="answer2_bt">Button2</string>
    <string name="answer3_bt">Button3</string>
    <string name="answer4_bt">Button4</string>
    <string name="Hello">Hello!!!_)\n                              This is 1000Words app</string>
</resources>
