<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/testing_button"
            android:title="@string/testing"/>
        <item
            android:id="@+id/single_test_button"
            android:title="@string/choose_single_test"/>
        <item
            android:id="@+id/library_button"
            android:title="@string/library"/>
        <item
            android:id="@+id/show_progress_button"
            android:title="@string/your_progress"/>
        <item
            android:id="@+id/change_profile_button"
            android:title="@string/change_profile"/>
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:title="@string/share"/>
            <item
                android:id="@+id/log_out"
                android:title="@string/log_out"/>
        </menu>
    </item>

</menu>
